- sitne izmene za datum