@@ -3,8 +3,8 @@ package mrs.isa.team12.clinical.center.model;
 import static javax.persistence.CascadeType.ALL;
 import static javax.persistence.FetchType.LAZY;
 
+import java.sql.Date;
 import java.util.ArrayList;
-import java.util.Date;
 import java.util.List;
 import java.util.Set;
 
@@ -17,8 +17,6 @@ import javax.persistence.JoinColumn;
 import javax.persistence.ManyToOne;
 import javax.persistence.OneToMany;
 import javax.persistence.Table;
-
-import com.fasterxml.jackson.annotation.JsonBackReference;
 
 import mrs.isa.team12.clinical.center.model.enums.OrdinationType;
 
@@ -41,8 +39,6 @@ public class Ordination {
 	
 	@ManyToOne
 	@JoinColumn(name = "clinic_id", referencedColumnName = "id", nullable = false)
-	//@JsonBackReference
-	@JsonBackReference("clinic-ordinations")
 	private Clinic clinic;
 	
 	@OneToMany(cascade = {ALL}, fetch = LAZY, mappedBy = "ordination")
@@ -120,7 +116,7 @@ public class Ordination {
 					if (a.getDate().equals(date)) {
 						Integer start = a.getStartTime();
 						for (int i = 0; i < a.getAppType().getDuration(); i++) {
-							times.remove(new Integer(start+i));
+							times.remove(Integer.valueOf(start+i));
 						}
 					}
 				}
